add commects to blog.proto file. add create_time field to blog db. add settings for java and csharp
